fixed travis builds
build_help.sh is still expected to be in scripts, so we do not move
it in the first step. the whole folder will be deleted later.

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ env:
   
 script:
   - cd ..
-  - mv coordinator/scripts/* .
+  - mv -v coordinator/scripts/{build.sh,docker_test_setup.sh,travis_test.sh} .
   - chmod +x build.sh docker_test_setup.sh travis_test.sh
   - ./build.sh coordinator
   - ./travis_test.sh ${QGIS_RELEASE}
