--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,7 @@ run-tests-ltr:
     - docker run -d --name qgis-34 -e DISPLAY=:99 qgis/qgis:release-3_4
     - sleep 2
     - /bin/bash scripts/docker_test_setup.sh qgis-34
-    - docker exec -t qgis-34 sh -c "qgis_testrunner.sh coordinator.test.runtests_docker"
+    - docker exec -t qgis-34 sh -c "qgis_testrunner.sh coordinator.test.run_all"
   after_script:
     - docker stop qgis-34
     - docker container rm qgis-34
@@ -42,7 +42,7 @@ run-tests-36:
     - docker run -d --name qgis-36 -e DISPLAY=:99 qgis/qgis:release-3_6
     - sleep 2
     - /bin/bash scripts/docker_test_setup.sh qgis-36
-    - docker exec -t qgis-36 sh -c "qgis_testrunner.sh coordinator.test.runtests_docker"
+    - docker exec -t qgis-36 sh -c "qgis_testrunner.sh coordinator.test.run_all"
   after_script:
     - docker stop qgis-36
     - docker container rm qgis-36
