build/gitlab: always pull docker images before doing anything else

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,8 @@ before_script:
 build:
   stage: build
   script:
+    - docker pull qgis/qgis:release-3_4
+    - docker pull qgis/qgis:release-3_6
     - docker run -d --name qgis-build -e DISPLAY=:99 qgis/qgis:release-3_6
     - sleep 2
     - docker exec qgis-build sh -c "pip3 install markdown2"
