--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ build:
   script:
     - docker pull qgis/qgis:release-3_4
     - docker pull qgis/qgis:release-3_6
+    - docker pull qgis/qgis:final-3_8_0
     - docker run -d --name qgis-build -e DISPLAY=:99 qgis/qgis:release-3_6
     - sleep 2
     - docker exec qgis-build sh -c "pip3 install markdown2"
@@ -48,3 +49,15 @@ run-tests-36:
   after_script:
     - docker stop qgis-36
     - docker container rm qgis-36
+    
+run-tests-38:
+  stage: test
+  script:
+    - docker run -d --name qgis-38 -e DISPLAY=:99 qgis/qgis:final-3_8_0
+    - sleep 2
+    - /bin/bash scripts/docker_test_setup.sh qgis-36
+    - docker exec -t qgis-38 sh -c "qgis_testrunner.sh coordinator.test.run_all"
+  after_script:
+    - docker stop qgis-38
+    - docker container rm qgis-38
+
